--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,9 @@
 # https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
 #
 # Binaries for programs and plugins
-*.exe
-*.exe~
-*.dll
-*.so
-*.dylib
+
+/gh-prview
+/gh-prview.exe
 
 # Test binary, built with `go test -c`
 *.test
@@ -14,12 +12,6 @@
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
-# Dependency directories (remove the comment below to include it)
-# vendor/
-
 # Go workspace file
 go.work
 go.work.sum
-
-# env file
-.env
